# Muscle_Fatigue_Study_data_collection

./: .gitignore  Makefile  RPE_data_P001_Max_Wickham_Session_001_20240827_203459.csv  RPE_data_P001_Max_Wickham_Session_001_20240827_204946.csv  RPE_data_P001_Max_Wickham_Session_002_20240827_204011.csv  participant_mapping.csv  pyproject.toml  requirements.txt  visualize_data.py
raw_data/Alex_Incidente/: Alex_Venditti_Left_2.c3d  RPE_data_P016_Alex_Venditti_Left_Session_004_20240919_142918.csv
raw_data/P001_Leonardo_Garofalo_Right/Session_001/EMG/: Leonardo_Garofalo_Right_3.c3d  Leonardo_Garofalo_Right_3.txt  Leonardo_Garofalo_Right_4.c3d  Leonardo_Garofalo_Right_4.txt
raw_data/P001_Leonardo_Garofalo_Right/Session_001/RPE/: RPE_data_P001_Leonardo_Garofalo_Right_Session_001_20240910_095109.csv  RPE_data_P001_Leonardo_Garofalo_Right_Session_001_20240910_095704.csv  RPE_data_P001_Leonardo_Garofalo_Right_Session_001_20240910_100338.csv  RPE_data_P001_Leonardo_Garofalo_Right_Session_001_20240910_100946.csv
raw_data/P001_Leonardo_Garofalo_Right/Session_002/EMG/: Leonardo_Garofalo_Right_2.txt
raw_data/P001_Leonardo_Garofalo_Right/Session_002/RPE/: RPE_data_P001_Leonardo_Garofalo_Right_Session_002_20240912_143757.csv  (+1 more)
src/: config.py  create_csv_dataset.py
src/RPE_recording/: RPE_data_collection_GUI.py  RPE_live_plot.py  RPE_recording_GUI.py  record_RPE_data.py  select_partecipant_and_session.py
src/utils/: beep.py  extract_session_info_from_file_path.py  get_rpe_filepath.py  natural_sort_key.py  save_data.py  select_file.py  show_error.py
(+475 files in other folders)
