[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Data collection tools for muscle fatigue experiment"
authors = [
  { name = "Leonardo Garofalo" },
]
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = "~=3.12.3"


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true